[tool.poetry]
name = "censusdis"
version = "1.1.15"
description = "US Census utilities for a variety of data loading, analysis, and mapping purposes."
license = "HL3-CL-ECO-EXTR-FFD-LAW-MIL-SV"
authors = ["Darren Vengroff"]
readme = "README.md"
repository = "https://github.com/vengroff/censusdis"
keywords = ["census", "demographics"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research"
]

[tool.poetry.dependencies]
python = "^3.9"
divintseg = "^0.6.1"
logargparser = "^0.1.1"
geopandas = "^0.14.1"
pyarrow = "^16.0.0"  # Will become required when pandas hits 3.0.
Rtree = "^1.0.0"
matplotlib = "^3.8.2"
Sphinx = { version = "^6.1.3", optional = true }
sphinx-rtd-theme = { version = "2.0.0", optional = true }
sphinx-copybutton = { version = "^0.5.1", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
nbsphinx = { version = "^0.9.3", optional = true }
toml = "^0.10.2"
requests = "^2.32.0"
geopy = "^2.2.0"
adjustText = "^0.8"
Fiona = "^1.9.0"
contextily = "^1.3.0"
haversine = "^2.8.0"
PyYAML = "^6.0"
usingversion = "^0.1.1"
mapclassify = { version = "^2.6.1", optional = true }
ipyleaflet = { version = "^0.19.0", optional = true }
folium = { version = "^0.17.0", optional = true }
pyogrio = "^0.9.0"
# rasterio is pinned because with rasterio 1.3.10 the following tests fail:
#
#    test_maps.py::MapPlotTestCase::test_plot_us_boundary_with_background_no_relocate
#    test_maps.py::MapPlotTestCase::test_plot_us_with_background_no_relocate
#
# with the error
#
#  _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
# ../censusdis/maps.py:1142: in plot_us_boundary
#     cx.add_basemap(ax, crs=gdf.crs.to_string(), source=provider)
# ../../../Library/Caches/pypoetry/virtualenvs/censusdis-brFxk0td-py3.9/lib/python3.9/site-packages/contextily/plotting.py:139: in add_basemap
#     image, extent = warp_tiles(image, extent, t_crs=crs, resampling=resampling)
# ../../../Library/Caches/pypoetry/virtualenvs/censusdis-brFxk0td-py3.9/lib/python3.9/site-packages/contextily/tile.py:336: in warp_tiles
#     w_img, bounds, _ = _warper(
# ../../../Library/Caches/pypoetry/virtualenvs/censusdis-brFxk0td-py3.9/lib/python3.9/site-packages/contextily/tile.py:401: in _warper
#     with WarpedVRT(mraster, crs=t_crs, resampling=resampling) as vrt:
# rasterio/_warp.pyx:1029: in rasterio._warp.WarpedVRTReaderBase.__init__
#     ???
# rasterio/_warp.pyx:772: in rasterio._warp.auto_create_warped_vrt
#     ???
# _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
#
# >   ???
# E   rasterio._err.CPLE_NotSupportedError: Cannot find coordinate operations from 'EPSG:3857' to 'EPSG:6893'
#
# rasterio/_err.pyx:182: CPLE_NotSupportedError
#
# Pinning for now pending further investigation.
rasterio = "1.3.9"
#
# Jinja2 is a recursive dependency along several paths. Make sure
# we have a patched version that fixes a security issue raised by
# dependabot. Once intermediate packages get this dependency upgrade
# we can delete it here.
jinja2 = ">=3.1.4"
jupyter = "^1.0.0"

[tool.poetry.extras]
explore = ["mapclassify", "ipyleaflet", "folium"]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinx-copybutton", "sphinxcontrib-napoleon", "toml"]

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^3.0.0"
nbmake = "^1.3.5"
scikit-image = "^0.22.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.14"
flake8 = "^7.0.0"
black = "^24.1.0"
isort = "^5.10.1"
pylint = "^2.15.2"
mypy = "^0.971"
types-requests = "^2.28.10"

[tool.poetry.group.dist.dependencies]
genbadge = {extras = ["all"], version = "^1.1.0"}

[tool.poetry.scripts]
censusdis = "censusdis.cli.cli:main"

[tool.coverage.report]
omit = ["tests/*"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
