[tool.poetry]
name = "censusdis"
version = "1.4.1"
description = "US Census utilities for a variety of data loading, analysis, and mapping purposes."
license = "HL3-CL-ECO-EXTR-FFD-LAW-MIL-SV"
authors = ["Darren Vengroff"]
readme = "README.md"
repository = "https://github.com/vengroff/censusdis"
keywords = ["census", "demographics"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research"
]

[tool.poetry.dependencies]
python = "^3.10"
divintseg = "^0.7.0"
logargparser = "^0.1.1"
geopandas = "1.0.1"
pyarrow = "^18.0.0"  # Will become required when pandas hits 3.0.
Rtree = "^1.0.0"
matplotlib = "^3.9.1"
Sphinx = { version = "^6.1.3", optional = true }
sphinx-rtd-theme = { version = "2.0.0", optional = true }
sphinx-copybutton = { version = "^0.5.1", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
nbsphinx = { version = "^0.9.3", optional = true }
toml = "^0.10.2"
requests = "^2.32.0"
geopy = "^2.2.0"
adjustText = "^0.8"
Fiona = "^1.10.0"
contextily = "^1.3.0"
haversine = "^2.8.0"
PyYAML = "^6.0"
usingversion = "^0.1.1"
mapclassify = { version = "^2.7.0", optional = true }
ipyleaflet = { version = "^0.19.0", optional = true }
folium = { version = "^0.17.0", optional = true }
pyogrio = "^0.10.0"
rasterio = "^1.3.10"
# Jinja2 is a recursive dependency along several paths. Make sure
# we have a patched version that fixes a security issue raised by
# dependabot. Once intermediate packages get this dependency upgrade
# we can delete it here.
jinja2 = ">=3.1.4"
jupyterlab = { version = "^4.2.3", optional = true }
ipywidgets = { version = "^8.1.3", optional = true }
numpy = "^2.0.0"

# Deal with a certificate issue. See https://uscensusbureau.slack.com/archives/CC7DYQ8PM/p1752773503093109
certifi = "==2025.01.31"

[tool.poetry.extras]
explore = ["mapclassify", "ipyleaflet", "folium"]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinx-copybutton", "sphinxcontrib-napoleon", "toml"]
jupyterlab = ["jupyterlab", "ipywidgets"]

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^3.0.0"
nbmake = "^1.3.5"
scikit-image = "^0.24.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.14"
flake8 = "^7.0.0"
black = {extras = ["jupyter"], version = "^24.1.0"}
isort = "^5.10.1"
pylint = "^2.15.2"
mypy = "^0.971"
types-requests = "^2.28.10"

[tool.poetry.group.dist.dependencies]
genbadge = {extras = ["all"], version = "^1.1.0"}


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"

[tool.poetry.scripts]
censusdis = "censusdis.cli.cli:main"

[tool.coverage.report]
omit = ["tests/*"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
